<resources>
    <string name="app_name">Lab2</string>
    <string name="one_one">One,One</string>
    <string name="one_two">One,Two</string>
    <string name="one_three">One,Three</string>
    <string name="one_four">One,Four</string>
    <string name="two_one">Two,One</string>
    <string name="two_two">Two,Two</string>
    <string name="two_three">Two,Three</string>
    <string name="two_four">Two,Four</string>
    <string name="three_one">Three,One</string>
    <string name="three_two">Three,Two</string>
    <string name="three_three">Three,Three</string>
    <string name="three_four">Three,Four</string>
    <string name="four_one">Four,One</string>
    <string name="four_two">Four,Two</string>
    <string name="four_three">Four,Three</string>
    <string name="four_four">Four,Four</string>
    <string name="input">Input</string>
    <string name="display">0.0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="point">.</string>
    <string name="multiply">×</string>
    <string name="divide">÷</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="equal">=</string>
    <string name="zero">0</string>
    <string name="open">Open...</string>
    <string name="save">Save...</string>
    <string name="as">Save As...</string>
    <string name="o">Ctrl-O</string>
    <string name="s">Ctrl-S</string>
    <string name="ss">Ctrl-Shift-S</string>
    <string name="x">X</string>
    <string name="impor">Import...</string>
    <string name="export">Export...</string>
    <string name="e">Ctrl-E</string>
    <string name="quit">Quit</string>
    <string name="blank"> </string>
</resources>
