<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="8dp"
            android:layout_weight="2"
            android:background="#FFFFFF"
            android:gravity="center"
            android:text="@string/one_one"></TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:layout_marginRight="8dp"
            android:text="@string/one_two"
            android:gravity="center">
        </TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_marginRight="8dp"
            android:text="@string/one_three"
            android:gravity="center">
        </TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/one_four"
            android:gravity="center">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="8dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_marginRight="8dp"
            android:text="@string/two_one"
            android:gravity="center">
        </TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:layout_marginRight="8dp"
            android:text="@string/two_two"
            android:gravity="center">
        </TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_marginRight="8dp"
            android:text="@string/two_three"
            android:gravity="center">
        </TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/two_four"
            android:gravity="center">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="8dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="8dp"
            android:text="@string/three_one"
            android:gravity="center">
        </TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="8dp"
            android:text="@string/three_two"
            android:gravity="center">
        </TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="8dp"
            android:text="@string/three_three"
            android:gravity="center">
        </TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/three_four"
            android:gravity="center">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:layout_marginRight="8dp"
            android:text="@string/four_one"
            android:gravity="center">
        </TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="9"
            android:layout_marginRight="8dp"
            android:text="@string/four_two"
            android:gravity="center">
        </TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:layout_marginRight="8dp"
            android:text="@string/four_three"
            android:gravity="center">
        </TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:text="@string/four_four"
            android:gravity="center">
        </TextView>
    </LinearLayout>
</LinearLayout>
