<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow>

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"></TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open"
            android:textSize="30sp"></TextView>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/o"
            android:textSize="30sp"></TextView>
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"></TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textSize="30sp"></TextView>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/s"
            android:textSize="30sp"></TextView>
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"></TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/as"
            android:textSize="30sp"></TextView>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/ss"
            android:textSize="30sp"></TextView>
    </TableRow>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimaryDark" />

    <TableRow>

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text="@string/x"
            android:textSize="30sp"></TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/impor"
            android:textSize="30sp"></TextView>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"></TextView>
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text="@string/x"
            android:textSize="30sp"></TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/export"
            android:textSize="30sp"></TextView>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/e"
            android:textSize="30sp"></TextView>
    </TableRow>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimaryDark" />

    <TableRow>

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"></TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quit"
            android:textSize="30sp"></TextView>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"></TextView>
    </TableRow>
</TableLayout>

